<resources>
    <string name="app_name">PhoneFinder</string>
    <string name="mobile_tracker" translatable="false">PhoneFinder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="info">Info</string>
    <string name="play_sound">PLAY SOUND</string>
    <string name="vibrate_phone">VIBRATE PHONE</string>
    <string name="get_location_sms">GET LOCATION (SMS)</string>
    <string name="get_contact_sms">GET CONTACT (SMS)</string>
    <string name="get_all_contacts_mms">DOWNLOAD ALL CONTACTS</string>
    <string name="erase_all_data">ERASE ALL DATA</string>
    <string name="login">Login</string>
    <string name="track_your_device_without_internet_connection">TRACK YOUR DEVICE WITHOUT INTERNET CONNECTION</string>
    <string name="mobile">MOBILE</string>
    <string name="password">PASSWORD</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="valid_mobile">Enter a valid mobile number</string>
    <string name="valid_password">Enter a valid password</string>
    <string name="welcome_to_tracker">Welcome to PhoneFinder</string>
    <string name="phone_ex">Example: +963---------</string>
    <string name="username">USERNAME</string>
    <string name="register">REGISTER</string>
    <string name="create_an_account_not_all_caps">Create an Account</string>
    <string name="required_field">This field is required</string>
    <string name="connect_device">Connect Device</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="connection_requests">Connection Requests</string>
    <string name="connect">Connect</string>
    <string name="reject">Reject</string>
    <string name="connection_accepted">Connection Accepted</string>
    <string name="connection_rejected">Connection Rejected</string>
    <string name="request_sent">Request Sent Successfully</string>
    <string name="sms_sent">SMS WAS SENT</string>
    <string name="sms_not_sent">SMS WAS NOT SENT</string>
    <string name="confirmation">Confirmation</string>
    <string name="sms_message_send">SMS Message will be sent!</string>
    <string name="contact_name">Contact Name</string>
    <string name="send">Send</string>
    <string name="map">Map</string>
    <string name="my_devices">My Devices</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="enable_all_permissions">You\'ll be redirected to permissions screen, please enable all permission to proceed</string>
</resources>
