<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    app:cardCornerRadius="20dp"
    android:layout_height="wrap_content"
    app:contentPadding="16dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/phone_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:inputType="phone"
            android:hint="@string/mobile"
            app:met_helperText="@string/phone_ex"
            android:maxLines="1"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/connect_device_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/gradient_background"
            android:text="@string/connect_device"
            android:textColor="@color/md_white_1000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/phone_editText"
            app:layout_constraintStart_toStartOf="@+id/phone_editText"
            app:layout_constraintTop_toBottomOf="@+id/phone_editText" />


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>