<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".views.activities.SignupActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/mToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="64dp"
            android:text="@string/create_an_account_not_all_caps"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/materialize_typography_headline"
            app:layout_constraintBottom_toTopOf="@+id/username_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mToolbar"
            app:layout_constraintVertical_chainStyle="packed" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/username_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="monospace"
            android:hint="@string/username"
            android:inputType="text"
            android:nextFocusDown="@id/phone_editText"
            app:layout_constraintBottom_toTopOf="@+id/phone_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_chainStyle="packed"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_helperText="@string/phone_ex" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/phone_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="monospace"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:nextFocusDown="@id/password_editText"
            app:layout_constraintBottom_toTopOf="@+id/password_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_editText"
            app:layout_constraintVertical_chainStyle="packed"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_helperText="@string/phone_ex" />



        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:fontFamily="monospace"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_editText"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight" />


        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/register"
            android:background="@drawable/gradient_background"
            android:textColor="@color/md_white_1000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_editText" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>