<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="90dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/md_white_1000">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_smartphone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="Samsung Galaxy S9+ "
            android:textColor="@color/md_black_1000"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="+963994150392"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_white_1000"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#A9A9A9" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_ring"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/play_sound"
            android:textColor="@color/md_black_1000"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#A9A9A9" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_vibration_black_24dp"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/vibrate_phone"
            android:textColor="@color/md_black_1000"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#A9A9A9" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_location"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/get_location_sms"
            android:textColor="@color/md_black_1000"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#A9A9A9" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/get_contact_sms"
            android:textColor="@color/md_black_1000"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#A9A9A9" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/get_all_contacts_mms"
            android:textColor="@color/md_black_1000"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#A9A9A9" />

    </LinearLayout>
</LinearLayout>
